# Car

./: CMakeLists.txt  Hardware_Specifications.docx  Optimization Summary.txt  README.md  System architecture.docx  aruco_test.cpp  car_server.c  csb.c  demostration video link.txt  error.txt  final.cpp  follow_test  hwbz.c  robot.cpp  test2 自动避障和手动操控  test_final  test_final.cpp  version_1_code_testing.md  websocket后段 main  xunji.c  zhz.c
Camera/: test_camera.c
Obstacle avoidance_code/Arduino/: final.ino  final_with follow  test_final.ino  test_final_with follow
Obstacle avoidance_code/Raspberry pi/: aruco_test.cpp  final.cpp  follow_change.cpp  follow_test.cpp  test1  test2 自动避障和手动操控  test_final_1  test_final_2  test_with follow
Obstacle avoidance_version1/: Makefile  Structural description.txt  camera.cpp  main.cpp  robot.cpp  robot.h
Obstacle avoidance_version2/: Optimization Summary.txt  camera.cpp  camera.h  main.cpp  motor.cpp  ultrasonic.cpp
Obstacle avoidance_version3/: Structural description.txt  camera.cpp  controlpanel.cpp  main.cpp
Obstacle avoidance_version4/: Structural description.txt  controlpanel.cpp  controlpanel.h  scheduler.cpp  scheduler.h  test_robot.cpp  ultrasonic.cpp
PREVIOUS/: Project Task Allocation.docx  aruco_test.cpp
PREVIOUS/Obstacle avoidance_code/Arduino/: test_final_with follow
PREVIOUS/Tutorial/: car_server.c  commands.md  xunji.c
Tutorial/: car_server.c  csb.c  hwbz.c  obstacle_avoidance.c  zhz.c
UPDATE/: PREVIOUS TO VERSION1.txt  VERSION1 TO VERSION2.txt  VERSION2 TO VERSION3.txt  VERSION3 TO VERSION4.txt
docs/: Project Revision Meeting Minutes.docx  Structural description.txt  Team Roles.md  background.docx
mainproject/Camera/: test_camera.c
mainproject/Obstacle avoidance_code/Arduino/: final.ino
mainproject/Obstacle avoidance_code/Raspberry pi/: aruco_test.cpp
media/photo/: README.md
shoe_follow_project/: train_model.py
src/final version/: CMakeLists.txt  Makefile  camera.cpp  camera.h  controlpanel.cpp  controlpanel.h  motor.cpp  motor.h  robot.cpp  robot.h  scheduler.cpp  scheduler.h  ultrasonic.cpp  ultrasonic.h
src/old versions/Obstacle avoidance_version1/: main.cpp  robot.cpp  ultrasonic.cpp
src/old versions/Obstacle avoidance_version2/: Makefile  Structural description.txt  main.cpp
src/old versions/Obstacle avoidance_version3/: Makefile  Structural description.txt  main.cpp  motor.h  robot.cpp  test_robot.cpp  ultrasonic.h
src/old versions/PREVIOUS/: aruco_test.cpp
src/old versions/PREVIOUS/Obstacle avoidance_code/Arduino/: final.ino  test_final.ino  (+1 more)
src/old versions/PREVIOUS/Tutorial/: Infrared obstacle avoidance.c  Ultrasonic obstacle avoidance.c  obstacle_avoidance.c  zhz.c
web/: app.py  flask_web.py  readme.md  rpi_config.py
web/templates/: index.html
(+8 files in other folders)
